# web-scraper-service

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  test_tenacity_log.py
application/: analysis_service.py  config.py  extractor_utils.py  task_queue.py
docs/: api_reference.md  architecture.md  configuration.md  index.md
domain/: models.py  ports.py
infrastructure/: browser_pool.py  logging_config.py  proxy_manager.py  repository.py  resilience.py  scraper.py  session_store.py
presentation/: routes.py  schemas.py
