[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "web-analyst"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "playwright>=1.44.0",
    "playwright-stealth>=1.0.6",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "structlog>=24.2.0",
    "tenacity>=8.3.0",
    "circuitbreaker>=2.0.0",
    "httpx>=0.27.0",
    "anyio>=4.4.0",
]

[tool.hatch.build.targets.wheel]
packages = ["application", "domain", "infrastructure", "presentation"]

[tool.hatch.build.targets.sdist]
include = [
    "application",
    "domain",
    "infrastructure",
    "presentation",
    "main.py",
    ".env.example",
]